logs/Slang/generated/yosys/asicworld_code_verilog_tutorial_parity.sv.log
name: asicworld_code_verilog_tutorial_parity
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_parity.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_parity.v:35:1: error: expected member
xor u0 (out_0,a,b);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_parity.v:37:1: error: expected member
xor u1 (out_1,c,d);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_parity.v:39:1: error: expected member
xor u2 (y,out_0,out_1);
^~~
